crates/gldf-rs-ffi/generated/gldf_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void ffi_gldf_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_gldf_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_gldf_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_gldf_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_gldf_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_pointer(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_gldf_ffi_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_gldf_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_gldf_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_gldf_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_gldf_ffi_rust_future_free_void(uint64_t handle
);
void ffi_gldf_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_gldf_ffi_checksum_func_get_l3d_asset(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_gldf_library_version(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_gldf_to_json(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_ifc_import(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_ifc_to_gldf_bytes(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_parse_eulumdat(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_parse_eulumdat_bytes(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_parse_l3d(void
    
);
uint16_t uniffi_gldf_ffi_checksum_func_parse_l3d_structure(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_add_application(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_add_file(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_export_to_ifc(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_applications(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_archive_file(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_electrical(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_emitter_data(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_file_content(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_file_content_as_string(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_files(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_content(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_file_id(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_files(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_header(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_image_files(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_light_sources(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_photometric_files(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_stats(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_get_variants(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_has_archive_data(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_import_from_ifc(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_is_modified(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_list_archive_files(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_mark_saved(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_remove_application(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_remove_file(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_applications(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_author(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_constant_light_output(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_created_with_application(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_creation_time_code(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_default_language(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_electrical_safety_class(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_format_version(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_ip_code(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_light_distribution(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_manufacturer(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_power_factor(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_set_switching_capacity(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_to_json(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_to_pretty_json(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_to_xml(void
    
);
uint16_t uniffi_gldf_ffi_checksum_method_gldfengine_update_file(void
    
);
uint16_t uniffi_gldf_ffi_checksum_constructor_gldfengine_from_bytes(void
    
);
uint16_t uniffi_gldf_ffi_checksum_constructor_gldfengine_from_json(void
    
);
uint16_t uniffi_gldf_ffi_checksum_constructor_gldfengine_new_empty(void
    
);
uint32_t ffi_gldf_ffi_uniffi_contract_version(void
    
);