bindings/csharp/src/Generated/gldf_ffi.cs


    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_u64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_u64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_u64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern ulong ffi_gldf_ffi_rust_future_complete_u64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_i64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_i64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_i64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern long ffi_gldf_ffi_rust_future_complete_i64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_f32(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_f32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_f32(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern float ffi_gldf_ffi_rust_future_complete_f32(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_f64(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_f64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_f64(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern double ffi_gldf_ffi_rust_future_complete_f64(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_pointer(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_pointer(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_pointer(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern IntPtr ffi_gldf_ffi_rust_future_complete_pointer(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_rust_buffer(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_rust_buffer(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_rust_buffer(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern RustBuffer ffi_gldf_ffi_rust_future_complete_rust_buffer(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_poll_void(IntPtr @handle,IntPtr @callback,IntPtr @callbackData
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_cancel_void(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_free_void(IntPtr @handle
    );

    [DllImport("gldf_ffi")]
    public static extern void ffi_gldf_ffi_rust_future_complete_void(IntPtr @handle,ref UniffiRustCallStatus _uniffi_out_err
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_get_l3d_asset(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_gldf_library_version(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_gldf_to_json(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_ifc_import(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_ifc_to_gldf_bytes(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_parse_eulumdat(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_parse_eulumdat_bytes(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_parse_l3d(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_func_parse_l3d_structure(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_add_application(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_add_file(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_export_to_ifc(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_applications(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_archive_file(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_electrical(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_emitter_data(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_file_content(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_file_content_as_string(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_files(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_content(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_file_id(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_geometry_files(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_header(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_image_files(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_light_sources(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_photometric_files(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_stats(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_get_variants(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_has_archive_data(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_import_from_ifc(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_is_modified(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_list_archive_files(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_mark_saved(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_remove_application(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_remove_file(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_applications(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_author(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_constant_light_output(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_created_with_application(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_creation_time_code(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_default_language(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_electrical_safety_class(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_format_version(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_ip_code(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_light_distribution(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_manufacturer(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_power_factor(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_set_switching_capacity(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_to_json(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_to_pretty_json(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_to_xml(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_method_gldfengine_update_file(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_constructor_gldfengine_from_bytes(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_constructor_gldfengine_from_json(
    );

    [DllImport("gldf_ffi")]
    public static extern ushort uniffi_gldf_ffi_checksum_constructor_gldfengine_new_empty(
    );

    [DllImport("gldf_ffi")]
    public static extern uint ffi_gldf_ffi_uniffi_contract_version(
    );

    

    static void uniffiCheckContractApiVersion() {
        var scaffolding_contract_version = _UniFFILib.ffi_gldf_ffi_uniffi_contract_version();
        if (26 != scaffolding_contract_version) {
            throw new UniffiContractVersionException($"uniffi.gldf_ffi: uniffi bindings expected version `26`, library returned `{scaffolding_contract_version}`");
        }
    }
